H264SharpNative/Exports.h

    DLL_EXPORT int InitializeDecoderDefault(Decoder* decoder) {
        return decoder->Initialize();
    }
    DLL_EXPORT int InitializeDecoder(Decoder* decoder, SDecodingParam decParam) {
        return decoder->Initialize(decParam);
    }
    DLL_EXPORT bool DecodeAsYUV(Decoder* decoder, unsigned char* frame, int length, bool noDelay, DecodingState* state, YuvNative* decoded) {
        return decoder->Decode(frame, length, noDelay, *state, *decoded);
    }
    DLL_EXPORT bool DecodeAsRGBInto(Decoder* decoder, unsigned char* frame, int length, bool noDelay, DecodingState* state, unsigned char* decoded) {
        return decoder->DecodeExt(frame, length, noDelay, *state, decoded);
    }
    DLL_EXPORT void FreeDecoder(Decoder* decoder) {
        delete decoder;
    }
    DLL_EXPORT int SetOptionDecoder(Decoder* decoder, DECODER_OPTION option, void* value) {
        return decoder->SetOption(option, value);
    }
    DLL_EXPORT int GetOptionDecoder(Decoder* decoder, DECODER_OPTION option, void* value) {
        return decoder->GetOption(option, value);
    }
    DLL_EXPORT void ConverterGetConfig(ConverterConfig* config) 
    {
        *config = Converter::Config;
    }
   
    DLL_EXPORT void ConverterSetConfig(ConverterConfig config) 
    {
        Converter::SetConfig(config);
    }
    //-----

    /*DLL_EXPORT void YUV420ToRGB(YuvNative* from, RgbImage* to, int threadCount) {
        Converter::Yuv420PtoRGB(*from,to->ImageBytes, true, threadCount);
    }*/
    DLL_EXPORT void YUV420ToRGB(YuvNative* from, GenericImage* to)
    {
        switch (to->Type)
        {
            case ImageType::Rgb:
                Converter::Yuv420PtoRGB<3, true>(to->ImageBytes, from->Y, from->U, from->V, from->width, from->height, from->yStride, from->uvStride, to ->Stride);
                break;
            case ImageType::Bgr:
                Converter::Yuv420PtoRGB<3, false>(to->ImageBytes, from->Y, from->U, from->V, from->width, from->height, from->yStride, from->uvStride, to->Stride);
                break;
            case ImageType::Rgba:
                Converter::Yuv420PtoRGB<4, true>(to->ImageBytes, from->Y, from->U, from->V, from->width, from->height, from->yStride, from->uvStride, to->Stride);
                break;
            case ImageType::Bgra:
                Converter::Yuv420PtoRGB<4, false>(to->ImageBytes, from->Y, from->U, from->V, from->width, from->height, from->yStride, from->uvStride, to->Stride);
                break;
            default:
                break;

        }
        //Converter::Yuv420PtoRGB<3,true>(to->ImageBytes, from->Y, from->U, from->V, to->Width, to->Height, from->yStride, from->uvStride, to->Width * 3);
    }
    DLL_EXPORT void RGBX2YUV420(GenericImage* from, YuvNative* to) {
        switch (from->Type)
        {
        case ImageType::Rgb:
            Converter::RGBXtoYUV420Planar<3,true>(from->ImageBytes, to->Y, from->Width, from->Height, from->Stride);
            break;
        case ImageType::Bgr:
            Converter::RGBXtoYUV420Planar<3, false>(from->ImageBytes, to->Y, from->Width, from->Height, from->Stride);
            break;
        case ImageType::Rgba:
            Converter::RGBXtoYUV420Planar<4, true>(from->ImageBytes, to->Y, from->Width, from->Height, from->Stride);
            break;
        case ImageType::Bgra:
            Converter::RGBXtoYUV420Planar<4, false>(from->ImageBytes, to->Y, from->Width, from->Height, from->Stride);
            break;
        default:
            break;

        }
    }
   
    DLL_EXPORT void YUVNV12ToYV12(YuvNV12Native* from, YuvNative* to) 
    {
        Converter::Yuv_NV12ToYV12(*from, *to);
    }
    DLL_EXPORT void YUVNV12ToRGB(YuvNV12Native* from, GenericImage* to)
    {
        switch (to->Type)
        {
        case ImageType::Rgb:
            Converter::Yuv_NV12ToRGB<3, true>(*from, to->ImageBytes, to->Stride);
            break;
        case ImageType::Bgr:
            Converter::Yuv_NV12ToRGB<3, false>(*from, to->ImageBytes, to->Stride);
            break;
        case ImageType::Rgba:
            Converter::Yuv_NV12ToRGB<4, true>(*from, to->ImageBytes, to->Stride);
            break;
        case ImageType::Bgra:
            Converter::Yuv_NV12ToRGB<4, false>(*from, to->ImageBytes, to->Stride);
            break;
        default:
            break;
        }
        
    }
    DLL_EXPORT void* AllocAlligned(uint32_t size)
    {
        return AllignAlloc(size);
    }
    DLL_EXPORT void FreeAlligned(void* p)
    {
        FreeAllignAlloc(p);
    }
    DLL_EXPORT void DownscaleImg(GenericImage* from, GenericImage* to, int multiplier) {
        ImageType imtype = from->Type;
        switch (imtype) {
        case ImageType::Rgb:
        case ImageType::Bgr:
            Converter::Downscale24(from->ImageBytes, from->Width, from->Height, from->Stride, to->ImageBytes, multiplier);
            break;

        default:
            Converter::Downscale32(from->ImageBytes, from->Width, from->Height, from->Stride, to->ImageBytes, multiplier);
            break;
        }
    }